# Opt_backtester

./: .gitignore  README.md  main.py  pyproject.toml
backtest/: base_strategy.py  engine.py
data/: data_downloader.py  read_data.py
frontend/: backend.py  streamlit_app.py  streamlit_app.py.bak
strategies/short_straddle_delta_hedge/: config.json  strategy.py
strategies/short_straddle_delta_hedge/report/2025-11-08_023916/: pnl_summary.csv  report.json  trades.csv
strategies/short_straddle_delta_hedge/report/2025-11-08_033616/: pnl_summary.csv  trades.csv
strategies/short_straddle_delta_hedge/report/2025-11-08_033857/: report.json
strategies/short_straddle_delta_hedge/report/2025-11-08_034656/: trades.csv
strategies/short_straddle_delta_hedge/report/2025-11-08_035507/: pnl_summary.csv  report.json
strategies/short_straddle_delta_hedge/report/2025-11-08_043404/: pnl_summary.csv  report.json  trades.csv
strategies/short_straddle_delta_hedge/report/2025-11-08_125227/: pnl_summary.csv  report.json  trades.csv
strategies/short_straddle_delta_hedge/report/2025-11-08_172153/: pnl_summary.csv  report.json
strategies/short_straddle_delta_hedge/report/2025-11-08_172600/: trades.csv
strategies/short_straddle_delta_hedge/report/2025-11-08_172733/: pnl_summary.csv  report.json  trades.csv
strategies/short_straddle_delta_hedge/report/2025-11-08_180254/: pnl_summary.csv  report.json  trades.csv
strategies/short_straddle_delta_hedge/report/2025-11-08_181738/: equity_drawdown.html  pnl_summary.csv  report.json  tradebook.csv
(+55 files in other folders)
