[project]
name = "opt-backtestser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "matplotlib",
    "fyers-api",
    "pyarrow",
    "mibian>=0.1.3",
    "scipy>=1.11.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "streamlit>=1.26.0",
    "plotly>=6.4.0",
]
